# src/dto/transferDTO.ts
@@ -4,4 +4,15 @@ export interface CreateTransferDTO {
    transferType: 'deposit' | 'withdrawal';
    amount: number;
    currency: 'krw' | 'usd';
+   transferName: string;
+}
+
+export interface UpdateTransferDTO {
+   accountId: number;
+   transferId: number;
+   transferDate: Date;
+   transferType: 'deposit' | 'withdrawal';
+   amount: number;
+   currency: 'krw' | 'usd';
+   transferName: string;
 }
